<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_an_image_loading_library_by_bumptech">Glide - an image loading library by BumpTech</string>
    <string name="load_app_current_repository_by_udacity">Load App - current repository by udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_by_square_inc">Retrofit - Type-safe Http client for android by Square inc</string>
    <string name="download_button">Download Button</string>
    <string name="file_name">File Name:</string>
    <string name="download_status">Download status:</string>
    <string name="file">File</string>
    <string name="status">Status</string>
    <string name="ok">Ok</string>
</resources>
